Added register and login

--- a/SchedularApp-SPA/src/app/app.component.html
+++ b/SchedularApp-SPA/src/app/app.component.html
@@ -6,11 +6,11 @@
 <!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
+<app-nav></app-nav>
 <!-- Toolbar -->
-<h2>Welcome to {{title}}</h2>
+<app-home></app-home>
+<!-- <h2>Welcome to {{title}}</h2> -->
 
-<app-value></app-value>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
