--- a/SchedularApp-SPA/src/app/app.component.html
+++ b/SchedularApp-SPA/src/app/app.component.html
@@ -8,7 +8,8 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <app-nav></app-nav>
 <!-- Toolbar -->
-<app-home></app-home>
+<router-outlet></router-outlet>
+
 <!-- <h2>Welcome to {{title}}</h2> -->
 
 
