--- a/SchedularApp-SPA/src/app/nav/nav.component.html
+++ b/SchedularApp-SPA/src/app/nav/nav.component.html
@@ -3,13 +3,13 @@
     <a class="navbar-brand" [routerLink]="['/home']">Schedular App</a>
     <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['/members']">Cooks </a>
+        <a class="nav-link" [routerLink]="['/members']"> Members </a>
       </li>
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['/lists']">Lists</a>
       </li>
       <li class="nav-item" routerLinkActive="active"> 
-        <a class="nav-link" [routerLink]="['/messages']">Messages</a>
+        <a class="nav-link" [routerLink]="['/messages']"> Messages </a>
       </li>
     </ul>
     <!-- ngIf is a structural directive so always has *, always change the DOM -->
