--- a/SchedularApp-SPA/src/app/nav/nav.component.html
+++ b/SchedularApp-SPA/src/app/nav/nav.component.html
@@ -8,12 +8,16 @@
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['/lists']">Lists</a>
       </li>
-      <li class="nav-item" routerLinkActive="active"> 
+      <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['/messages']"> Messages </a>
       </li>
     </ul>
     <!-- ngIf is a structural directive so always has *, always change the DOM -->
+
     <div *ngIf="loggedIn()" class="dropdown" dropdown>
+      <span class="mr-1">
+        <img src="{{photoUrl}}" alt="">
+      </span>
       <a class="dropdown-toggle text-light" dropdownToggle>
         Welcome {{authService.decodedToken.unique_name | titlecase}}
       </a>
