--- a/SchedularApp-SPA/src/app/members/member-card/member-card.component.html
+++ b/SchedularApp-SPA/src/app/members/member-card/member-card.component.html
@@ -1,6 +1,6 @@
 <div class="card mb-d">
   <div class="card-img-wrapper">
-    <img class="card-img-top" src="{{user.photoUrl}}" alt="{{user.knownas}}">
+    <img class="card-img-top" src="{{user.photoUrl || '../../assets/user.png'}}" alt="{{user.knownAs}}">
     <ul class="list-inline member-icons animate text-center">
       <li class="list-inline-item" [routerLink]="['/members/', user.id]" >
         <button class="btn btn-primary"><i class="fa fa-user"></i></button>
@@ -11,7 +11,7 @@
   </div>
   <div class="card-body p-1">
     <h6 class="card-title text-center mb-1">
-      <i class="fa fa-user"> {{user.knownas}}, {{user.age}}</i>
+      <i class="fa fa-user"> {{user.knownAs}}, {{user.age}}</i>
     </h6>
     <p class="card-text text-muted text-center">{{user.city}}</p>
   </div>
